- Security fix: remove login links - Add link to blog

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,23 +1,29 @@
 <footer id="pageFooter">
-<div class="container">
-  <div class="row d-flex centered justify-content-md-between ">
-    <div class="col-8 col-md-2  centered">
-      <img
-      class="img-fluid p-3 p-md-0"
-      src="/img/logos/kettle-id-full-color-vert.svg"
-      />
-    </div>
-    <div class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end">
-      <ul class="mt-3 mt-md-0 pl-0 text-center text-md-right">
-        <li><a href="#our-solutions">Our Solutions</a></li>
-        <li><a href="#kettle-technology">Kettle Techonology</a></li>
-        <li><a href="#our-team">Our Team</a></li>
-        <li><a target="_blank" href="https://apply.workable.com/kettle-2/">Careers</a></li>
-        <li><a target="_blank" href="https://dev-1o3jlswz.auth0.com/u/login?state=g6Fo2SB4VE41VlFadjEzWHZ0Ym5pT2RlcU1ZMENXQjhfeWtTdaN0aWTZIDBfQ0drVkt1dUJrbTJRUm9HV0U2MkJWNnV4aWpjQjI1o2NpZNkgQ1VEOXRaTG55UERweHVqa0hZYmk4bU5rQ3BwWlF0VTc">Login</a></li>
-      </ul>
+  <div class="container">
+    <div class="row d-flex centered justify-content-md-between">
+      <div class="col-8 col-md-2 centered">
+        <img
+          class="img-fluid p-3 p-md-0"
+          src="/img/logos/kettle-id-full-color-vert.svg"
+        />
+      </div>
+      <div
+        class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end"
+      >
+        <ul class="mt-3 mt-md-0 pl-0 text-center text-md-right">
+          <li><a href="#our-solutions">Our Solutions</a></li>
+          <li><a href="#kettle-technology">Kettle Techonology</a></li>
+          <li><a href="#our-team">Our Team</a></li>
+          <li>
+            <a target="_blank" href="https://apply.workable.com/kettle-2/"
+              >Careers</a
+            >
+          </li>
+          <li>
+            <a target="_blank" href="https://medium.com/the-safety-net">Blog</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
-
-
 </footer>
