--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,24 +1,44 @@
 <header id="pageHeader" class="">
-  <div class="container px-0 px-med-auto mx-0 mx-md-auto" style="max-width: auto;">
+  <div
+    class="container px-0 px-med-auto mx-0 mx-md-auto"
+    style="max-width: auto"
+  >
     <nav id="mainnav" class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="/">
-      <img
-      alt="Kettle logo"
-      src="/img/logos/kettle-id-full-color-horz.svg"
-    />
+        <img alt="Kettle logo" src="/img/logos/kettle-id-full-color-horz.svg" />
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#primarynav" aria-controls="primarynav" aria-expanded="false" aria-label="Toggle navigation">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#primarynav"
+        aria-controls="primarynav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
         <span class="navbar-toggler-icon"></span>
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse justify-content-md-end" id="primarynav">
+      <div
+        class="collapse navbar-collapse justify-content-md-end"
+        id="primarynav"
+      >
         <ul class="navbar-nav">
-          <li class="nav-item "><a data-scroll class="nav-link" href="#our-solutions">Our Solutions</a></li>
-          <li class="nav-item "><a data-scroll class="nav-link" href="#kettle-technology">Kettle Technology</a></li>
-          <li class="nav-item "><a data-scroll class="nav-link" href="#our-team">Our Team</a></li>
-          <li class="nav-item "><a target="_blank" data-scroll class="nav-link" id="loginButton" href="https://app.ourkettle.com">Login</a></li>
+          <li class="nav-item">
+            <a data-scroll class="nav-link" href="#our-solutions"
+              >Our Solutions</a
+            >
+          </li>
+          <li class="nav-item">
+            <a data-scroll class="nav-link" href="#kettle-technology"
+              >Kettle Technology</a
+            >
+          </li>
+          <li class="nav-item">
+            <a data-scroll class="nav-link" href="#our-team">Our Team</a>
+          </li>
         </ul>
       </div>
     </nav>
